--- a/default.html
+++ b/default.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <p>&copy; {{ site.time | date: '%Y' }} Hi...I'am Bharathi Thiruvengadam... </p>
+    <p>&copy; {{ site.time | date: '%Y' }} Bharathi's Homepage </p>
   </footer>
 </body>
 </html>
