--- a/default.html
+++ b/default.html
@@ -10,12 +10,12 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/bio' | relative_url }}">Bio</a></li>
-        <li><a href="{{ '/teaching' | relative_url }}">Teaching</a></li>
-        <li><a href="{{ '/research' | relative_url }}">Research</a></li>
-        <li><a href="{{ '/event' | relative_url }}">Events</a></li>
-        <li><a href="{{ '/activities' | relative_url }}">Activities</a></li>
+        <li><a href="{{ '/' | https://bharathi-thiruvengadam.github.io/Homepage/ }}">Home</a></li>
+        <li><a href="{{ '/bio' | https://bharathi-thiruvengadam.github.io/Homepage/bio }}">Bio</a></li>
+        <li><a href="{{ '/teaching' | https://bharathi-thiruvengadam.github.io/Homepage/teaching }}">Teaching</a></li>
+        <li><a href="{{ '/research' | https://bharathi-thiruvengadam.github.io/Homepage/research }}">Research</a></li>
+        <li><a href="{{ '/event' | https://bharathi-thiruvengadam.github.io/Homepage/event }}">Events</a></li>
+        <li><a href="{{ '/activities' | https://bharathi-thiruvengadam.github.io/Homepage/activities }}">Activities</a></li>
       </ul>
     </nav>
   </header>
