--- a/default.html
+++ b/default.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "style.css" | https://github.com/Bharathi-Thiruvengadam/Homepage/blob/36a4716d242487ee8c35376a5841e848e7c40f1c/style.css }}">
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">{{ site.title }}</div>
+      <div class="logo">{{ Bharathi's Homepage }}</div>
       <button class="menu-toggle" aria-label="Menu">☰</button>
       <ul class="nav-links">
-        <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about/">About</a></li>
+        <li><a href="{{https://github.com/Bharathi-Thiruvengadam/Homepage/}}/">Home</a></li>
+        <li><a href="{{ https://github.com/Bharathi-Thiruvengadam/Homepage/blob/36a4716d242487ee8c35376a5841e848e7c40f1c/about.md }}/about/">About</a></li>
       </ul>
     </nav>
   </header>
@@ -23,7 +23,7 @@
   </main>
 
   <footer>
-    <p>© 2024 {{ site.title }}.</p>
+    <p>© 2024 {{ Bharathi's Homepage }}.</p>
   </footer>
 
   <!-- Add a script for the menu toggle functionality -->
