--- a/default.html
+++ b/default.html
@@ -18,6 +18,7 @@
         <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/event/">Event</a></li>
          <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/activities/">Activities</a></li>
          <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/gallery/">Gallery</a></li>
+         <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/research/">Research</a></li>
       </ul>
     </nav>
   </header>
